--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -13,19 +13,16 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
-      - uses: actions/setup-node@v4
-        with:
-          node-version: 20.x
       - uses: pnpm/action-setup@v2
-        with:
-          version: 8
 
       - name: Install dependencies
         run: pnpm install
 
       - name: Build
-        run: npm run build
+        run: pnpm run build
 
       - name: test
         working-directory: ./test
-        run: pnpm install && npm start -- --skipBuild
+        run: | 
+          pnpm install 
+          pnpm start -- --skipBuild
