--- a/.github/workflows/migrate.yaml
+++ b/.github/workflows/migrate.yaml
@@ -12,20 +12,17 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
-      - uses: actions/setup-node@v4
-        with:
-          node-version: 20.x
       - uses: pnpm/action-setup@v2
-        with:
-          version: 8
 
       - name: Setup dependencies
-        run: pnpm install && npm run build
+        run: |
+          pnpm install
+          pnpm run build
 
       - name: Build
         working-directory: ./packages/migrate
-        run: npm run build
+        run: pnpm run build
         
       - name: test
         working-directory: ./packages/migrate
-        run: npm run test
+        run: pnpm run test
