--- a/.github/workflows/website.yml
+++ b/.github/workflows/website.yml
@@ -12,17 +12,17 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
-      - uses: actions/setup-node@v4
-        with:
-          node-version: 20.x
+
       - uses: pnpm/action-setup@v2
-        with:
-          version: 8
       - name: Root Setup
-        run: pnpm install && npm run build
+        run: |
+          pnpm install
+          pnpm run build
       - name: Build
         working-directory: website 
-        run: npm install && npm run build
+        run: |
+          pnpm install
+          pnpm run build
       - name: Deploy
         uses: JamesIves/github-pages-deploy-action@4.1.3
         with:
