--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@nestia/core",
-  "version": "4.3.0-dev.20241215-2",
+  "version": "4.4.0-dev.20241216",
   "description": "Super-fast validation decorators of NestJS",
   "main": "lib/index.js",
   "typings": "lib/index.d.ts",
@@ -48,16 +48,16 @@
     "reflect-metadata": ">=0.1.12",
     "rxjs": ">=6.0.3",
     "tgrid": "^1.1.0",
-    "typia": "^7.3.0",
+    "typia": "^7.4.0",
     "ws": "^7.5.3"
   },
   "peerDependencies": {
-    "@nestia/fetcher": ">=4.3.0-dev.20241215-2",
+    "@nestia/fetcher": ">=4.4.0-dev.20241216",
     "@nestjs/common": ">=7.0.1",
     "@nestjs/core": ">=7.0.1",
     "reflect-metadata": ">=0.1.12",
     "rxjs": ">=6.0.3",
-    "typia": ">=7.2.0 <8.0.0"
+    "typia": ">=7.4.0 <8.0.0"
   },
   "devDependencies": {
     "@nestjs/common": "^10.4.13",
