--- a/packages/editor/package.json
+++ b/packages/editor/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@nestia/editor",
-  "version": "4.3.0-dev.20241215-2",
+  "version": "4.4.0-dev.20241216",
   "typings": "lib/index.d.ts",
   "main": "lib/index.js",
   "module": "lib/index.mjs",
@@ -40,7 +40,7 @@
     "js-yaml": "^4.1.0",
     "prettier": "3.3.3",
     "react-mui-fileuploader": "^0.5.2",
-    "typia": "^7.3.0"
+    "typia": "^7.4.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.13.0",
