--- a/packages/migrate/package.json
+++ b/packages/migrate/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@nestia/migrate",
-  "version": "4.3.0-dev.20241215-2",
+  "version": "4.4.0-dev.20241216",
   "description": "Migration program from swagger to NestJS",
   "typings": "lib/index.d.ts",
   "main": "lib/index.js",
@@ -78,7 +78,7 @@
     "prettier": "^3.2.5",
     "tstl": "^3.0.0",
     "typescript": "~5.7.2",
-    "typia": "^7.3.0"
+    "typia": "^7.4.0"
   },
   "files": [
     "lib",
