--- a/.github/workflows/website.yml
+++ b/.github/workflows/website.yml
@@ -19,7 +19,7 @@ jobs:
         with:
           version: 8
       - name: Root Setup
-        run: pnpm install && pnpm install @nestia/editor@latest && npm run build
+        run: pnpm install && npm run build
       - name: Build
         working-directory: website 
         run: npm install && npm run build
