--- a/packages/agent/package.json
+++ b/packages/agent/package.json
@@ -39,18 +39,23 @@
     "src"
   ],
   "devDependencies": {
+    "@nestia/e2e": "^0.7.0",
     "@rollup/plugin-terser": "^0.4.4",
     "@rollup/plugin-typescript": "^12.1.1",
+    "@samchon/shopping-api": "^0.11.0",
     "@types/node": "^22.10.5",
     "chalk": "4.1.2",
+    "dotenv": "^16.3.1",
+    "dotenv-expand": "^10.0.0",
     "rimraf": "^6.0.1",
     "rollup": "^4.29.1",
     "ts-patch": "^3.3.0",
+    "tstl": "^3.0.0",
     "typescript": "~5.7.2",
     "typescript-transform-paths": "^3.5.3"
   },
   "dependencies": {
-    "@samchon/openapi": "^2.3.1",
+    "@samchon/openapi": "^2.3.2",
     "openai": "^4.77.0",
     "typia": "^7.5.1"
   }
