--- a/packages/agent/package.json
+++ b/packages/agent/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@nestia/agent",
   "version": "0.1.0",
-  "description": "Super-fast validation decorators of NestJS",
+  "description": "Super A.I. Chatbot agent by Swagger Document",
   "main": "lib/index.js",
   "module": "lib/index.mjs",
   "typings": "lib/index.d.ts",
@@ -17,13 +17,15 @@
     "url": "https://github.com/samchon/nestia"
   },
   "keywords": [
-    "nestjs",
+    "openai",
+    "chatgpt",
+    "anthropic",
+    "claude",
+    "ai",
+    "chatbot",
     "nestia",
-    "typia",
-    "validator",
-    "decorator",
-    "class-validator",
-    "class-transformer"
+    "swagger",
+    "openapi"
   ],
   "author": "Jeongho Nam",
   "license": "MIT",
@@ -39,11 +41,14 @@
     "src"
   ],
   "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^5.57.0",
+    "@typescript-eslint/parser": "^5.57.0",
     "@nestia/e2e": "^0.7.0",
     "@rollup/plugin-terser": "^0.4.4",
     "@rollup/plugin-typescript": "^12.1.1",
     "@samchon/shopping-api": "^0.11.0",
     "@types/node": "^22.10.5",
+    "@types/uuid": "^10.0.0",
     "chalk": "4.1.2",
     "dotenv": "^16.3.1",
     "dotenv-expand": "^10.0.0",
@@ -57,6 +62,7 @@
   "dependencies": {
     "@samchon/openapi": "^2.3.2",
     "openai": "^4.77.0",
-    "typia": "^7.5.1"
+    "typia": "^7.5.1",
+    "uuid": "^11.0.4"
   }
 }
