--- a/packages/chat/package.json
+++ b/packages/chat/package.json
@@ -34,11 +34,13 @@
   },
   "homepage": "https://nestia.io",
   "dependencies": {
+    "@mui/icons-material": "^6.3.1",
     "@mui/material": "^5.15.6",
     "@nestia/agent": "workspace:^",
     "@samchon/openapi": "^2.3.2",
     "js-yaml": "^4.1.0",
     "prettier": "3.3.3",
+    "react-markdown": "^9.0.3",
     "react-mui-fileuploader": "^0.5.2",
     "typia": "^7.5.1"
   },
@@ -50,6 +52,7 @@
     "@nestjs/platform-fastify": "^10.4.13",
     "@rollup/plugin-terser": "^0.4.4",
     "@rollup/plugin-typescript": "^12.1.1",
+    "@samchon/shopping-api": "^0.11.0",
     "@types/js-yaml": "^4.0.9",
     "@types/node": "^22.8.6",
     "@types/react": "^18.3.11",
@@ -59,6 +62,7 @@
     "eslint-plugin-react-hooks": "^5.0.0",
     "eslint-plugin-react-refresh": "^0.4.13",
     "globals": "^15.11.0",
+    "openai": "^4.77.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "rollup": "^4.24.2",
