--- a/packages/chat/package.json
+++ b/packages/chat/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@nestia/chat",
-  "version": "0.2.1",
+  "version": "0.1.0",
   "main": "lib/index.js",
   "module": "lib/index.mjs",
   "typings": "lib/index.d.ts",
@@ -36,12 +36,18 @@
   "dependencies": {
     "@mui/icons-material": "^6.3.1",
     "@mui/material": "^5.15.6",
-    "@nestia/agent": "workspace:^",
-    "@samchon/openapi": "^2.3.2",
+    "@nestia/agent": "^0.3.4",
+    "@samchon/openapi": "^2.3.4",
+    "html2canvas": "^1.4.1",
+    "js-file-download": "^0.4.12",
     "js-yaml": "^4.1.0",
     "prettier": "3.3.3",
+    "react-json-editor-ajrm": "^2.5.14",
     "react-markdown": "^9.0.3",
     "react-mui-fileuploader": "^0.5.2",
+    "rehype-raw": "^7.0.0",
+    "rehype-stringify": "^10.0.1",
+    "remark-mermaid-plugin": "^1.0.2",
     "typia": "^7.5.1"
   },
   "devDependencies": {
@@ -54,15 +60,16 @@
     "@rollup/plugin-typescript": "^12.1.1",
     "@samchon/shopping-api": "^0.11.0",
     "@types/js-yaml": "^4.0.9",
-    "@types/node": "^22.8.6",
+    "@types/node": "^22.10.5",
     "@types/react": "^18.3.11",
     "@types/react-dom": "^18.3.1",
+    "@types/react-json-editor-ajrm": "^2.5.6",
     "@vitejs/plugin-react": "^4.3.3",
     "eslint": "^9.13.0",
     "eslint-plugin-react-hooks": "^5.0.0",
     "eslint-plugin-react-refresh": "^0.4.13",
     "globals": "^15.11.0",
-    "openai": "^4.77.0",
+    "openai": "^4.77.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "rollup": "^4.24.2",
@@ -77,6 +84,7 @@
     "package.json",
     "dist",
     "lib",
-    "src"
+    "src",
+    "!src/test.ts"
   ]
 }
