--- a/.github/workflows/website.yml
+++ b/.github/workflows/website.yml
@@ -5,7 +5,11 @@ on:
       - master
     paths:
       - '.github/workflows/website.yml'
+      - 'packages/agent/**'
+      - 'packages/chat/**'
       - 'website/**'
+      - 'packages/agent/package.json'
+      - 'packages/chat/package.json'
       - 'website/package.json'
 jobs:
   deploy:
